--- a/python-app/template/catalog-info.yaml
+++ b/python-app/template/catalog-info.yaml
@@ -2,9 +2,10 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.app_name}}
-  description: Python app that displays time, named ${{values.app_name}}
+  description: Python app that displays time - named ${{values.app_name}}
   annotations:
     github.com/project-slug: ricardoandre97/${{values.app_name}}
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   owner: development
