--- a/python-app/template.yaml
+++ b/python-app/template.yaml
@@ -46,6 +46,7 @@ spec:
         description: This is ${{ parameters.component_id }}
         repoUrl: github.com?owner=ricardoandre-97&repo=${{parameters.component_id}}
         protectDefaultBranch: false
+        repoVisibility: public
 
     - id: register
       name: Register
