--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -82,7 +82,7 @@ jobs:
             --dest-server https://kubernetes.default.svc \
             --values values-${{values.app_env}}.yaml \
             --revision master \
-            --sync-policy auto \
+            --sync-policy manual \
             --sync-option CreateNamespace=true
 
       - name: Argocd app sync
