--- a/python-app/template/mkdocs.yaml
+++ b/python-app/template/mkdocs.yaml
@@ -1,6 +1,6 @@
 site_name: '${{values.app_name}}'
 site_description: 'Main documentation for the ${{values.app_name}}'
-repo_url: https://github.com/ricardoandre97/${{values.app_name}}
+repo_url: https://github.com/thidocapba/${{values.app_name}}
 edit_uri: edit/main/docs
 
 plugins:
