--- a/python-app/template.yaml
+++ b/python-app/template.yaml
@@ -44,7 +44,7 @@ spec:
         # allowedHosts:
         #   - github.com
         description: This is ${{ parameters.component_id }}
-        repoUrl: github.com?owner=thidocapba&repo=${{parameters.component_id}}
+        repoUrl: github.com?owner=dunglq16&repo=${{parameters.component_id}}
         protectDefaultBranch: false
         repoVisibility: public
 
