--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -71,7 +71,7 @@ jobs:
         run: |
 
           # Connects the argocd repo
-          repo="https://github.com/thidocapba/${{values.app_name}}.git"
+          repo="https://github.com/dunglq16/${{values.app_name}}.git"
           argocd repo list | grep -q $repo || argocd repo add $repo
 
           # Creates the argocd app
